--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "Sengine/vendor/GLFW"]
 	path = Sengine/vendor/GLFW
 	url = https://github.com/TheCherno/glfw
+[submodule "Sengine/vendor/imgui"]
+	path = Sengine/vendor/imgui
+	url = https://github.com/ocornut/imgui.git
