--- a/Sengine/Sengine.vcxproj.filters
+++ b/Sengine/Sengine.vcxproj.filters
@@ -4,6 +4,9 @@
     <Filter Include="Platform">
       <UniqueIdentifier>{2AC788B4-1694-E3BF-3FAD-D1672BD9184E}</UniqueIdentifier>
     </Filter>
+    <Filter Include="Platform\OpenGL">
+      <UniqueIdentifier>{1E7D2C1D-8A08-9AE1-9319-1DD6FF23F6E1}</UniqueIdentifier>
+    </Filter>
     <Filter Include="Platform\Windows">
       <UniqueIdentifier>{64FBD71A-50F4-F66C-7926-DCF1657ED678}</UniqueIdentifier>
     </Filter>
@@ -13,8 +16,14 @@
     <Filter Include="Sengine\Events">
       <UniqueIdentifier>{5233D3FA-3E01-C700-2795-37271302A365}</UniqueIdentifier>
     </Filter>
+    <Filter Include="Sengine\ImGui">
+      <UniqueIdentifier>{D8C6FB83-4487-77BA-0DC2-C0377941BC96}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="src\Platform\OpenGL\ImGuiOpenGLRenderer.h">
+      <Filter>Platform\OpenGL</Filter>
+    </ClInclude>
     <ClInclude Include="src\Platform\Windows\WindowsWindow.h">
       <Filter>Platform\Windows</Filter>
     </ClInclude>
@@ -40,6 +49,9 @@
     <ClInclude Include="src\Sengine\Events\MouseEvent.h">
       <Filter>Sengine\Events</Filter>
     </ClInclude>
+    <ClInclude Include="src\Sengine\ImGui\ImGuiLayer.h">
+      <Filter>Sengine\ImGui</Filter>
+    </ClInclude>
     <ClInclude Include="src\Sengine\Layer.h">
       <Filter>Sengine</Filter>
     </ClInclude>
@@ -55,11 +67,17 @@
     <ClInclude Include="src\sepch.h" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="src\Platform\OpenGL\ImGuiOpenGLRenderer.cpp">
+      <Filter>Platform\OpenGL</Filter>
+    </ClCompile>
     <ClCompile Include="src\Platform\Windows\WindowsWindow.cpp">
       <Filter>Platform\Windows</Filter>
     </ClCompile>
     <ClCompile Include="src\Sengine\Application.cpp">
       <Filter>Sengine</Filter>
+    </ClCompile>
+    <ClCompile Include="src\Sengine\ImGui\ImGuiLayer.cpp">
+      <Filter>Sengine\ImGui</Filter>
     </ClCompile>
     <ClCompile Include="src\Sengine\Layer.cpp">
       <Filter>Sengine</Filter>
